@@ -22,6 +22,7 @@ import co.elastic.apm.agent.http.client.HttpClientHelper;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Outcome;
 import co.elastic.apm.agent.impl.transaction.Span;
+import co.elastic.apm.agent.impl.transaction.TraceContext;
 import co.elastic.apm.agent.sdk.advice.AssignTo;
 import net.bytebuddy.asm.Advice;
 import net.bytebuddy.description.method.MethodDescription;
@@ -65,14 +66,20 @@ public class OkHttp3ClientInstrumentation extends AbstractOkHttp3ClientInstrumen
             Span span = HttpClientHelper.startHttpClientSpan(parent, request.method(), url.toString(), url.scheme(),
                 OkHttpClientHelper.computeHostName(url.host()), url.port());
 
-            Request.Builder builder = ((okhttp3.Request) originalRequest).newBuilder();
             if (span != null) {
                 span.activate();
-                span.propagateTraceContext(builder, OkHttp3RequestHeaderSetter.INSTANCE);
-            } else {
-                parent.propagateTraceContext(builder, OkHttp3RequestHeaderSetter.INSTANCE);
             }
-            return new Object[]{builder.build(), span};
+
+            if (!TraceContext.containsTraceContextTextHeaders(request, OkHttp3RequestHeaderGetter.INSTANCE)) {
+                Request.Builder builder = ((Request) originalRequest).newBuilder();
+                if (span != null) {
+                    span.propagateTraceContext(builder, OkHttp3RequestHeaderSetter.INSTANCE);
+                } else {
+                    parent.propagateTraceContext(builder, OkHttp3RequestHeaderSetter.INSTANCE);
+                }
+                request = builder.build();
+            }
+            return new Object[]{request, span};
         }
 
         @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class, inline = false)
